Update OpenAPI with PointOfInterest model, refactor controllers accordingly
