# backend/src/main/java/com/codecool/travelplanner/controller/RestaurantsController.java
@@ -1,7 +1,7 @@
 package com.codecool.travelplanner.controller;
 
 import com.codecool.travelplanner.api.RestaurantsApi;
-import com.codecool.travelplanner.model.Restaurant;
+import com.codecool.travelplanner.model.PointOfInterest;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
@@ -12,20 +12,18 @@ import java.util.List;
 public class RestaurantsController implements RestaurantsApi {
 
     @Override
-    public ResponseEntity<List<Restaurant>> restaurantsGet(String destinationName) {
-        Restaurant rest1 = new Restaurant();
-        rest1.setId("1");
+    public ResponseEntity<List<PointOfInterest>> restaurantsGet(String destinationName) {
+        PointOfInterest rest1 = new PointOfInterest();
         rest1.setName("Cukorborsó Kertvendéglő");
         rest1.setAddress("2071 Páty, Somogyi Béla út 72.");
-        rest1.setWebsiteUri("https://cukorborso.foodbuddy.hu/");
+        rest1.setUrl("https://cukorborso.foodbuddy.hu/");
 
-        Restaurant rest2 = new Restaurant();
-        rest2.setId("2");
+        PointOfInterest rest2 = new PointOfInterest();
         rest2.setName("Náncsi Néni Vendéglője");
         rest2.setAddress("1029 Budapest, Ördögárok út 80.");
-        rest2.setWebsiteUri("https://nancsineni.hu/");
+        rest2.setUrl("https://nancsineni.hu/");
 
-        List<Restaurant> dummyRestaurants = List.of(rest1, rest2);
+        List<PointOfInterest> dummyRestaurants = List.of(rest1, rest2);
 
         return new ResponseEntity<>(dummyRestaurants, HttpStatus.OK);
     }
